Fix message alignment

--- a/src/_scss/pages/aboutTheData/agencyDetailsPage.scss
+++ b/src/_scss/pages/aboutTheData/agencyDetailsPage.scss
@@ -15,6 +15,7 @@
       max-width: 160rem;
       .usda-message {
         background-color: $color-white;
+        width: 100vw;
       }
       .table-container,
         .table-controls {
